# VolAlpha

./: README.md  StressTest.ipynb  VolAlpha.ipynb
risk_reporting/: README.md  config.json  run.py  setup.cfg  setup.py
risk_reporting/app/: __init__.py  run.py
risk_reporting/app/app/: app.py
risk_reporting/app/app/assets/: table.css
risk_reporting/config/: production.json
stress_testing/: README.md
v_risk_reporting/app/app/: __init__.py  app.py  email_report.py
