[metadata]
name = 
version = 1.0.0
description = 
author = 
[flake8]
max-line-length = 120
ignore = E722,W503,W504,E265,E122,E123,E124

[yapf]
based_on_style = google
spaces_before_comment = 3
dedent_closing_brackets = true
column_limit = 120
split_complex_comprehension = true

[pep8]
max-line-length = 120
ignore = E402,W504,W503,E265,E122,E123,E124

[testenv]
commands = {posargs:pytest}
deps = .[test]

[tool:pytest]
addopts = --cov=src
markers =
    wip
    examples

[pylint]
enable = W0614
disable=F0401,W0141,W0611,W0110,W0703,W0142,too-many-instance-attributes,too-many-arguments,too-many-locals,no-else-return,no-member,too-few-public-methods,len-as-condition,missing-docstring,bad-continuation,useless-super-delegation,unused-variable,try-except-raise
variable-rgx=[a-z_][a-z0-9_]{0,30}$
argument-rgx=[a-z_][a-z0-9_]{0,30}$
function-rgx=[a-z_][a-z0-9_]{0,100}$
attr-rgx=[a-z_][a-z0-9_]{0,30}$

[TYPECHECK]
ignored-modules = numpy,pyodbc

